--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "18.2.0",
     "styled-components": "^6.0.2",
     "swr": "^2.2.4",
-    "use-immer": "^0.9.0"
+    "use-immer": "^0.9.0",
+    "use-local-storage-state": "^19.1.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
